--- a/deploy_demo.yml
+++ b/deploy_demo.yml
@@ -6,6 +6,7 @@
   connection: local
 
   vars:
+    ansible_python_interpreter: /usr/libexec/platform-python
     app_name: "DemoApp"
     environment: "lab"
     package_name: "nginx"
