--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 ---
-- name: AAP Localhost Deployment Demo
-  hosts: localhost
+- name: AAP Remote Deployment Demo (RHEL 9)
+  hosts: all
   connection: local
   gather_facts: true
   become: true
@@ -11,9 +11,11 @@
     environment: lab
 
   tasks:
-    - name: Show environment info
+    - name: Display target host info
       ansible.builtin.debug:
         msg:
+          - "Target host: {{ inventory_hostname }}"
+          - "OS: {{ ansible_distribution }} {{ ansible_distribution_major_version }}"
           - "Running in environment: {{ environment }}"
           - "Ansible version: {{ ansible_version.full }}"
           - "Python version: {{ ansible_python_version }}"
@@ -36,5 +38,6 @@
 
     - name: Display service status
       ansible.builtin.debug:
+        msg: "Service {{ demo_service }} state: {{ service_state.stdout }}"
         var: service_status.stdout_lines
 
