--- a/playbooks/roles/nginx/tasks/main.yml
+++ b/playbooks/roles/nginx/tasks/main.yml
@@ -1,3 +1,12 @@
+---
+# Stop Apache if running (port 80 conflict)
+- name: Stop and disable httpd if present
+  ansible.builtin.service:
+    name: httpd
+    state: stopped
+    enabled: false
+  ignore_errors: true
+
 - name: Install nginx via Satellite content
   ansible.builtin.dnf:
     name: nginx
