--- a/playbooks/roles/nginx/tasks/main.yml
+++ b/playbooks/roles/nginx/tasks/main.yml
@@ -8,7 +8,7 @@
   ignore_errors: true
 
 - name: Install nginx via Satellite content
-  ansible.builtin.dnf:
+  ansible.builtin.package:
     name: nginx
     state: present
 
