Updated main.yml fire for firewalld service

--- a/playbooks/roles/firewalld/tasks/main.yml
+++ b/playbooks/roles/firewalld/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Install ansible.posix collection
+  ansible.builtin.command:
+    cmd: ansible-galaxy collection install ansible.posix
+
 - name: Install firewalld
   ansible.builtin.dnf:
     name: firewalld
