--- a/playbooks/roles/firewalld/tasks/main.yml
+++ b/playbooks/roles/firewalld/tasks/main.yml
@@ -15,7 +15,7 @@
     enabled: true
 
 - name: Open HTTP port for nginx
-  ansible.posix.firewalld:
+  community.general.firewalld:  # Try community.general instead
     service: http
     permanent: true
     state: enabled
